--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,6 @@
 title: Project Brammer.Github.Io
 timezone: UTC
 collections:
-  posts:
-    title: Posts
-    output: true
   uploads:
     title: Uploads
     output: true
@@ -14,18 +11,19 @@ collections:
     permalink: "/work/:title/"
     layout: post
 defaults:
-- scope:
-    path: _work/
-    type: work
-  values:
-    layout: post
-    tags: []
-    title: ''
-    hero: ''
-    image: ''
-    publisher: ''
-    original: ''
-    quote: ''
+  - 
+    scope:
+        path: _work/
+        type: work
+      values:
+        layout: post
+        tags: []
+        title: ''
+        hero: ''
+        image: ''
+        publisher: ''
+        original: ''
+        quote: ''
 name: John Paul Brammer
 markdown: kramdown
 exclude:
