--- a/_config.yml
+++ b/_config.yml
@@ -14,18 +14,19 @@ collections:
     permalink: "/work/:title/"
     layout: post
 defaults:
-- scope:
-    path: _work/
-    type: work
-  values:
-    layout: post
-    tags: []
-    title: ''
-    hero: ''
-    image: ''
-    publisher: ''
-    original: ''
-    quote: ''
+  - 
+    scope:
+      path: "work"
+      type: "posts"
+    values:
+      layout: "post"
+      hero:
+      featured:
+      feature-number:
+      image:
+      publisher:
+      original:
+      quote:
 name: John Paul Brammer
 markdown: kramdown
 exclude:
