--- a/_config.yml
+++ b/_config.yml
@@ -10,18 +10,19 @@ collections:
     title: Uploads
     output: true
 defaults:
-- scope:
-    path: _work
-    type: works
-  values:
-    layout: post
-    hero: 
-    featured: 
-    feature-number: 
-    image: 
-    publisher: 
-    original: 
-    quote: 
+  - 
+    scope:
+      path: ""
+      type: posts
+    values:
+      layout: post
+      hero: 
+      featured: 
+      feature-number: 
+      image: 
+      publisher: 
+      original: 
+      quote: 
 name: John Paul Brammer
 markdown: kramdown
 exclude:
