--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ collections:
     title: Posts
     output: true
     layout: post
+    permalink: /work/:title/
   uploads:
     title: Uploads
     output: true
